--- a/trainsimulator/trainsimulator.ioc
+++ b/trainsimulator/trainsimulator.ioc
@@ -1,7 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;dashboard,0,128,Dashboard,Default,NULL,Dynamic,NULL,NULL;motorControl,0,128,MotorControl,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;motorControl,0,128,MotorControl,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 KeepUserPlacement=true
 Mcu.Family=STM32F4
@@ -44,8 +44,8 @@ Mcu.Pin33=PD12
 Mcu.Pin34=PD13
 Mcu.Pin35=PD14
 Mcu.Pin36=PD15
-Mcu.Pin37=PC7
-Mcu.Pin38=PC8
+Mcu.Pin37=PC6
+Mcu.Pin38=PC7
 Mcu.Pin39=PC9
 Mcu.Pin4=PC14-OSC32_IN
 Mcu.Pin40=PA8
@@ -81,6 +81,7 @@ MxDb.Version=DB.4.0.230
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false\:false\:true
 NVIC.EXTI0_IRQn=true\:5\:0\:false\:false\:true\:true\:true
+NVIC.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:false\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:false\:false\:true
@@ -152,10 +153,8 @@ PA7.GPIO_PuPd=GPIO_NOPULL
 PA7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA7.Locked=true
 PA7.Signal=SPI1_MOSI
-PA8.GPIOParameters=GPIO_PuPd
-PA8.GPIO_PuPd=GPIO_PULLDOWN
 PA8.Locked=true
-PA8.Signal=GPIO_Input
+PA8.Signal=GPXTI8
 PA9.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA9.GPIO_Label=VBUS_FS
 PA9.GPIO_Mode=GPIO_MODE_INPUT
@@ -253,6 +252,8 @@ PC3.GPIO_PuPd=GPIO_NOPULL
 PC3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC3.Locked=true
 PC3.Signal=I2S2_SD
+PC6.Locked=true
+PC6.Signal=GPXTI6
 PC7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC7.GPIO_Label=I2S3_MCK [CS43L22_MCLK]
 PC7.GPIO_Mode=GPIO_MODE_AF_PP
@@ -260,14 +261,8 @@ PC7.GPIO_PuPd=GPIO_NOPULL
 PC7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC7.Locked=true
 PC7.Signal=I2S3_MCK
-PC8.GPIOParameters=GPIO_PuPd
-PC8.GPIO_PuPd=GPIO_PULLDOWN
-PC8.Locked=true
-PC8.Signal=GPIO_Input
-PC9.GPIOParameters=GPIO_PuPd
-PC9.GPIO_PuPd=GPIO_PULLDOWN
 PC9.Locked=true
-PC9.Signal=GPIO_Input
+PC9.Signal=GPXTI9
 PCC.Checker=false
 PCC.Line=STM32F407/417
 PCC.MCU=STM32F407V(E-G)Tx
@@ -425,13 +420,23 @@ SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
+SH.GPXTI8.0=GPIO_EXTI8
+SH.GPXTI8.ConfNb=1
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
 SH.S_TIM1_CH2.ConfNb=1
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2
+TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period,OCPolarity_1,OCPolarity_2
+TIM1.OCPolarity_1=TIM_OCPOLARITY_LOW
+TIM1.OCPolarity_2=TIM_OCPOLARITY_LOW
+TIM1.Period=65535
+TIM1.Prescaler=0
 VP_FREERTOS_VS_ENABLE.Mode=Enabled
 VP_FREERTOS_VS_ENABLE.Signal=FREERTOS_VS_ENABLE
 VP_SYS_VS_Systick.Mode=SysTick
